# uploadstr

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: CI-CD.yml  docker-publish.yml
src/: main.rs
src/config/: mod.rs
src/endpoints/: filesystem.rs  mod.rs
src/nostr_auth/: check.rs  parse.rs
src/upload/: mod.rs  save.rs
