[package]
name = "uploadstr"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = { version = "1.3.59", features = [ "static-files" ] }
tokio = { version = "1.35.1", features = [ "rt-multi-thread" ] }
rust-crypto = "0.2.36"
base64 = "0.21.5"
nostr = "0.26.0"
serde_json = { version = "1.0.108", features = [ "std" ] }
config = "0.13.4"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5"
