[package]
name = "uploadstr"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
mockall = "0.12.1"

[dependencies]
poem = { version = "1.3.59", features = [ "static-files" ] }
tokio = { version = "1.35.1", features = [ "rt-multi-thread" ] }
base64 = "0.21.5"
nostr = "0.26.0"
serde_json = { version = "1.0.109", features = [ "std" ] }
config = "0.13.4"
ring = "0.17.7"
serde = "1.0.190"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5"
